# SLAM-KDQ

./: .gitignore  README.md  q
Matlab/DepthFilter/: DepthFilter.asv  DepthFilter.m  MeasInitialize.m  SeedInitialize.asv  SeedInitialize.m  angleErr2DepthErr.m  angleErrFromPixelErr.asv  angleErrFromPixelErr.m  compareSeed.m  df.cp.txt  df.txt  extractRovioIdData.m  testAllRovioFeature.m  testBearingVectorAndNormPlaneVector.asv  testDepthFilter_Random.m  testRovioFeature.m
Matlab/SLAMTool/: testPositionNoise.asv  testPositionNoise.m  triangulatePoint.m
PersonalSummary/: .~AM相关问题小计.docx  SLAM相关问题小计.docx
Programme/cpp/: gC++必看.txt
SlamCodes/b_spline/: CMakeLists.txt
SlamCodes/b_spline/app/: spline2.cpp  spline4.cpp  test.cpp  test1.cpp
SlamCodes/b_spline/include/: BSpline.hpp  BSplineX.hpp
SlamCodes/bundleAdjustment/: CMakeLists.txt
SlamCodes/bundleAdjustment/include/ba/: BundleAdjustmentByG2O.hpp
SlamCodes/bundleAdjustment/src/: test_g2o.cpp
SlamCodes/d435i_sdk/: CMakeLists.txt
SlamCodes/d435i_sdk/app/: d435i_intrinisic_calibr.cpp  test_charuco_board.cpp  test_detect_aruco.cpp  test_infrared.cpp
SlamCodes/d435i_sdk/config/: d435i_config.yaml
SlamCodes/d435i_sdk/include/: d435i.hpp
SlamCodes/d435i_sdk/src/: d435i.cpp
SlamCodes/data_interface/: CMakeLists.txt
SlamCodes/data_interface/inc/zz_vio_interface/: rovio.pb.h
SlamCodes/data_interface/src/zz_vio_interface/: rovio.pb.cc
SlamCodes/depth_filter/: CMakeLists.txt
SlamCodes/depth_filter/app/: test1.cpp
SlamCodes/depth_filter/config/: cam0_pinhole.yaml  config.yaml
SlamCodes/depth_filter/include/: Camera.hpp  DepthFilter.hpp
SlamCodes/depth_filter/src/: DepthFilter.cpp
SlamCodes/feature_track/: CMakeLists.txt
SlamCodes/feature_track/inc/optiflow_track/: vins_optitrack.hpp
SlamCodes/feature_track/src/: falcon_test.cpp  main.cpp
SlamCodes/feature_track/src/optiflow_track/: vins_optitrack.cpp
SlamCodes/gauss_filter/app/: test3.cpp
SlamCodes/gauss_filter/include/: GslGaussFilter.hpp
SlamCodes/image_alignment/: CMakeLists.txt
SlamCodes/image_alignment/app/: test_ImageAlignment.cpp  test_replay.cpp  test_replay_advance.cpp
SlamCodes/image_alignment/include/: ConfigLoad.hpp  ImageAlignment.hpp  OpticalFlowEstimation.hpp
SlamCodes/image_grayValue_histogram/app/: test1.cpp  test2.cpp
SlamCodes/image_grayValue_histogram/include/: ImageGrayValueHistogram.hpp
SlamCodes/replaykit/: CMakeLists.txt
SlamCodes/replaykit/proto/: rovio.proto
SlamCodes/vio/: CMakeLists.txt
SlamCodes/vio/app/: d435i_estimator.cpp  replaykit_replay.cpp  test_d435i_feature_track.cpp  test_estimator.cpp  test_featureTrack_node.cpp  test_initializator.cpp  test_replaykit_online.cpp
SlamCodes/vio/config/: d435i.yaml  default.yaml
SlamCodes/vio/include/utility/: fileSystem.hpp  tictoc.hpp
SlamCodes/vio/include/vio/: BASolver.hpp  BASolverByG2O.hpp  Camera.hpp  Config.hpp  Estimator.hpp  FeatureManager.hpp  FeatureTracker.hpp  Frame.hpp  Initializator.hpp  MeasurementTimeline.hpp  PnpSolver.hpp  PreIntegration.hpp  VizScene.hpp  ba_test.hpp.cpp
SlamCodes/vio/src/: Estimator.cpp  FeatureManager.cpp  FeatureTracker.cpp  Initializator.cpp  VizScene.cpp
SlamCodes/viz_scene/: CMakeLists.txt
SlamCodes/viz_scene/config/: config.yaml
SlamCodes/viz_scene/inc/camera_project/: camera_project.hpp
SlamCodes/viz_scene/inc/imu_motion/: imu_motion.hpp  motion_para.hpp
SlamCodes/viz_scene/inc/timer/: timer.hpp
SlamCodes/viz_scene/inc/utilities/: access_file.hpp  kinematic.hpp
SlamCodes/viz_scene/inc/viz_scene/: viz_scene.hpp
SlamCodes/viz_scene/src/: config.yaml  main.cpp  testCameraMotion.cpp
SlamCodes/viz_scene/src/camera_project/: camera_project.cpp
SlamCodes/viz_scene/src/imu_motion/: imu_motion.cpp
SlamCodes/viz_scene/src/viz_scene/: viz_scene.cpp
SlamCodes/vo/: CMakeLists.txt
SlamCodes/vo/app/: d435i_estimator.cpp  main.cpp  test_camera.cpp  test_camera2.cpp  test_camera_node.cpp  test_d435i_feature_track.cpp  test_estimator.cpp  test_featureTrack_node.cpp  test_initializator.cpp  test_pnpSolver.cpp  test_replaykit_online.cpp  test_vizScene.cpp
SlamCodes/vo/config/: d435i.yaml  default.yaml
SlamCodes/vo/include/vo/: Camera.hpp  Config.hpp  Estimator.hpp  FeatureManager.hpp  FeatureTracker.hpp  Frame.hpp  Initializator.hpp  PnpSolver.hpp  Simulator.hpp  VizScene.hpp
SlamCodes/vo/src/: Estimator.cpp  FeatureManager.cpp  FeatureTracker.cpp  Initializator.cpp  Simulator.cpp  VizScene.cpp
SlamCodes/vo_initialization/: CMakeLists.txt
SlamCodes/vo_initialization/inc/Initialization/: Initializator.hpp
SlamCodes/vo_initialization/src/: main.cpp
SlamCodes/vo_initialization/src/Initialization/: Initializator.cpp
SlamCodes/zz_replay/: CMakeLists.txt
SlamCodes/zz_replay_ros/config/: replay.yaml
SlamCodes/zz_replay_ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
SlamCodes/zz_replay_ros/devel/lib/pkgconfig/: zz_replay.pc
SlamCodes/zz_replay_ros/devel/lib/zz_replay/: replaykit  zz_replay
SlamCodes/zz_replay_ros/devel/share/zz_replay/cmake/: zz_replayConfig.cmake
SlamCodes/zz_replay_ros/src/zz_replay/: CMakeLists.txt
SlamCodes/zz_replay_ros/src/zz_replay/config/: replay.yaml
SlamCodes/zz_replay_ros/src/zz_replay/src/: replaykit.cpp
StudyLesson/Eigen_Lesson/: CMakeLists.txt
StudyLesson/c_plus/class_deconstruct/: deconstruct_1.cpp
StudyLesson/c_plus/shared_ptr/: CMakeLists.txt
