cmake_minimum_required(VERSION 2.8.3)
project(vo_initialization)
find_package(OpenCV)
set(Eigen_INC "./usr/local/include/eigen3")
include_directories(${OpenCV_INCLUDE_DIRS} ${Eigen_INC})
message(STATUS ${OpenCV_INCLUDE_DIRS})
add_executable(vo_ini src/main.cpp)
target_link_libraries(vo_ini ${OpenCV_LIBS})